--- a/feeds.toml
+++ b/feeds.toml
@@ -1,3 +1,13 @@
+[album_totalpicked]
+title = "벅스 ─ 최신 음악 ─ 앨범 ─ 주목"
+url = "https://music.bugs.co.kr/newest/album/totalpicked"
+entrySelector = "ul.list.tileView.albumList li"
+titleSelector = "figcaption.info div.albumTitle a"
+linkSelector = "figcaption.info div.albumTitle a"
+contentSelector = "div.subInfo"
+imageSelector = "div.thumbnail a img"
+waitUntil = "networkidle"
+
 [album_total]
 title = "벅스 ─ 최신 음악 ─ 앨범 ─ 전체"
 url = "https://music.bugs.co.kr/newest/album/total"
